--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   </section>
 
   <footer>
-    <p>📫 Contact: <a href="mailto:aditedm321@gmail.com">aditedm321@gmail.com</a></p>
-    <p>&copy; 2025 - Built with ❤️ by Adit</p>
-  </footer>
+  <p>&copy; 2025 Aditya Zahran Rasyid. All rights reserved.</p>
+</footer>
+</footer>
 </body>
 </html>
